# tinymdns

./: CMakeLists.txt  README.md
cmake/: freertos_esp32_xtensa-esp32-elf.cmake  freertos_esp8266_xtensa-lx106.cmake  linux_arm-fsl.cmake  linux_arm.cmake  linux_x86.cmake  macos.cmake  openwrt_mt7688.cmake  windows_x86.cmake
samples/esp32/sample-registry/: Makefile  build.sh
samples/esp32/sample-registry/main/: main.c  sample_registry.c  sample_registry.h
source/: CMakeLists.txt  MdnsHandler.c  MdnsHandlerContext.c  MdnsHandlerContext.h  ServiceInfo.h  ServiceObserver.c
source/cmake/: freertos_esp32_xtensa-esp32-elf.cmake  linux_x86.cmake  macos.cmake  openwrt_mt7688.cmake
source/codec/: DnsMessageCodec.c
source/message/: DnsMessage.c  DnsMessage.h  DnsRecord.c
source/src/: CMakeLists.txt
source/src/TinyMDNS/: CMakeLists.txt  MdnsConstant.h  MdnsHandler.c  MdnsHandler.h  MdnsHandlerContext.c  ServiceInfo.c  ServiceInfo.h
source/src/TinyMDNS/codec/: DnsMessageCodec.c
source/src/TinyMDNS/message/: DnsMessage.c  DnsName.c  DnsName.h  DnsQuestion.c  DnsRecord.c
source/src/TinyMDNS/test/: CMakeLists.txt  example_discovery.c  example_registry.c
source/src/dns-common/: CMakeLists.txt
source/src/dns-common/codec/: DnsMessageCodec.c  DnsMessageCodec.h
source/src/dns-common/message/: DnsMessage.c  DnsName.c  DnsQuestion.h  DnsRecord.c  DnsRecord.h  DnsTypedef.h  ServiceInfo.c
source/src/dns-server/: CMakeLists.txt  DnsServerHandler.c  DnsServerHandlerContext.c  DnsServerHandlerContext.h
source/src/dns-server-captive-portal/: CMakeLists.txt  DnsConstant.h  DnsServerHandler.c  DnsServerHandler.h  DnsServerHandlerContext.c  DnsServerHandlerContext.h
source/src/mdns/: CMakeLists.txt  MdnsHandler.h  MdnsHandlerContext.h  ServiceInfo.c  ServiceListener.h
source/src/mdns/message/: DnsTypedef.c
source/src/mdns/test/: CMakeLists.txt  example_discovery.c  example_registry.c
source/src/multicast-dns/: CMakeLists.txt  MdnsHandler.c  MdnsHandler.h  MdnsHandlerContext.c  MdnsHandlerContext.h  ServiceInfo.h  ServiceListener.h  ServiceObserver.c
source/test/: CMakeLists.txt  example_discovery.c  example_registry.c
